--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "wclean": "rd /s /q build",
     "development": "truffle migrate",
     "alastria": "truffle migrate --network  alastria",
+    "hd": "truffle migrate --network  ahd",
     "ganache": "ganache-cli -g 0",
     "coffee-cli": "node src/coffeeCli.js o",
     "contract-cli": "node src/contractUtils.js"
@@ -26,6 +27,7 @@
     "inquirer": "^5.2.0",
     "pad": "^2.0.3",
     "truffle": "^4.1.14",
+    "truffle-hdwallet-provider": "0.0.6",
     "web3": "^1.0.0-beta.36"
   }
 }
