--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
   },
   "scripts": {
     "start": "nps",
-    "test": "nps test"
+    "test": "nps test",
+    "ws:coffeeCli": "nps coffeeCli",
+    "ws:ganache": "nps nohupGanache",
+    "go": "npm-run-all -p ws:*",
+    "postgo": "node src/fkillTest.js"
   },
   "author": "",
   "license": "ISC",
@@ -16,9 +20,14 @@
     "colors": "^1.2.1",
     "commander": "^2.15.1",
     "dotenv": "^6.0.0",
+    "fkill": "^5.3.0",
     "ganache-cli": "^6.1.8",
     "inquirer": "^5.2.0",
+    "nohup": "^0.1.0",
+    "npm-run-all": "^4.1.3",
     "pad": "^2.0.3",
+    "pid-from-port": "^1.1.3",
+    "qrcode-terminal": "^0.12.0",
     "truffle": "^4.1.14",
     "truffle-hdwallet-provider": "0.0.6",
     "web3": "^1.0.0-beta.36"
