--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "inquirer": "^5.2.0",
     "nohup": "^0.1.0",
     "npm-run-all": "^4.1.3",
+    "openzeppelin-solidity": "2.0.0",
     "pad": "^2.0.3",
     "pid-from-port": "^1.1.3",
     "qrcode-terminal": "^0.12.0",
