--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "fkill": "^5.3.0",
     "ganache-cli": "^6.1.8",
     "inquirer": "^5.2.0",
+    "json-path-value": "0.0.1-beta2",
     "nohup": "^0.1.0",
     "npm-run-all": "^4.1.3",
     "pad": "^2.0.3",
