--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "colors": "^1.2.1",
     "commander": "^2.15.1",
     "dotenv": "^6.0.0",
+    "figlet": "^1.2.1",
     "fkill": "^5.3.0",
     "ganache-cli": "^6.1.8",
     "inquirer": "^5.2.0",
