--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "npm-run-all": "^4.1.3",
     "pad": "^2.0.3",
     "pid-from-port": "^1.1.3",
+    "prettyjson": "^1.2.1",
     "qrcode-terminal": "^0.12.0",
     "truffle": "^4.1.14",
     "truffle-hdwallet-provider": "0.0.6",
