--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "commander": "^2.15.1",
     "dotenv": "^6.0.0",
     "fkill": "^5.3.0",
-    "ganache-cli": "^6.2.3",
+    "ganache-cli": "6.1.8",
     "inquirer": "^5.2.0",
     "nohup": "^0.1.0",
     "npm-run-all": "^4.1.3",
