--- a/package.json
+++ b/package.json
@@ -32,10 +32,11 @@
     "pid-from-port": "^1.1.3",
     "qrcode-terminal": "^0.12.0",
     "rlp": "^2.1.0",
-    "solidity-rlp": "^1.1.0",
     "truffle": "^4.1.14",
     "truffle-hdwallet-provider": "0.0.6",
-    "web3": "^1.0.0-beta.36"
+    "web3": "^1.0.0-beta.36",
+    "json-warehouse": "0.0.1-beta3",
+    "figlet": "^1.2.1"
   },
   "devDependencies": {
     "nps": "^5.9.3"
