--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "directories": {
     "test": "test"
   },
+  "bin": {
+    "pcs": "./bin/pcs"
+  },
   "scripts": {
     "start": "nps",
     "test": "nps test",
