--- a/package.json
+++ b/package.json
@@ -25,22 +25,22 @@
     "colors": "^1.2.1",
     "commander": "^2.15.1",
     "dotenv": "^6.0.0",
+    "figlet": "^1.2.1",
     "fkill": "^5.3.0",
     "ganache-cli": "6.1.8",
     "inquirer": "^5.2.0",
+    "json-warehouse": "0.0.1-beta3",
     "nohup": "^0.1.0",
     "npm-run-all": "^4.1.3",
     "openzeppelin-solidity": "2.0.0",
     "pad": "^2.0.3",
     "pid-from-port": "^1.1.3",
+    "prettyjson": "^1.2.1",
     "qrcode-terminal": "^0.12.0",
     "rlp": "^2.1.0",
     "truffle": "^4.1.14",
     "truffle-hdwallet-provider": "0.0.6",
-    "web3": "^1.0.0-beta.36",
-    "json-warehouse": "0.0.1-beta3",
-    "figlet": "^1.2.1",
-    "prettyjson": "^1.2.1"
+    "web3": "^1.0.0-beta.36"
   },
   "devDependencies": {
     "nps": "^5.9.3"
